<resources>
    <string name="app_name">Shoe Box</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email:</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="updateAccount">Update Account</string>
    <string name="update">Update</string>
    <string name="signOut">Sign Out</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="addItem">Add Item</string>
    <string name="enter_shoe_name">Brand</string>
    <string name="enter_desc">Description</string>
    <string name="enter_price">Price</string>
    <string name="enter_id">Id</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVV</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pay">Pay</string>
    <string name="enter_email_id">Enter email id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulations">Congratulations!! \n\n Order Placed</string>
    <string name="buy_item">Add item to buy</string>
    <string name="enter_address">Enter address</string>
    <string name="address">Delivery Address</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile No.</string>
    <string name="admin">Admin</string>
</resources>