<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoebox.ui.AccountDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaryDarkColor"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow_back"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/shoemain"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="My Cart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/card_detail" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/below_image_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/card_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="15dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/name"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:paddingStart="15dp"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:fontFamily="@font/segoeui"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_name" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email_id"
                        android:paddingStart="15dp"
                        android:focusable="false"
                        android:clickable="false"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/email" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/mobile"
                        android:textSize="16sp"
                        android:fontFamily="@font/segoeui"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_mobile"
                        android:paddingStart="15dp"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/mobile" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/address"
                        android:textSize="16sp"
                        android:fontFamily="@font/segoeui"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_mobile" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_address"
                        android:paddingStart="15dp"
                        android:fontFamily="@font/segoeui"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/address" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/et_address">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/cardNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="-0.25dp"
                            android:drawableEnd="@drawable/credit_card"
                            android:hint="@string/card_number"
                            android:inputType="number"
                            android:fontFamily="@font/segoeui"
                            android:padding="16dp"
                            android:textSize="14sp"
                            android:maxLength="19"
                            tools:ignore="LabelFor,NegativeMargin" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/card_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-0.25dp"
                            android:orientation="horizontal"
                            tools:ignore="NegativeMargin">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/cardCVCEditText"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_marginLeft="-0.25dp"
                                android:layout_weight="1"
                                android:drawableRight="@drawable/lock_open"
                                android:hint="@string/cvc"
                                android:inputType="number"
                                android:fontFamily="@font/segoeui"
                                android:padding="16dp"
                                android:maxLength="3"
                                android:textSize="14sp"
                                tools:ignore="LabelFor,RtlHardcoded" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_pay"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/primaryDarkColor"
                            android:gravity="center_vertical|center"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:fontFamily="@font/segoeui"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>